--- a/public/Assets/css/navbar.css
+++ b/public/Assets/css/navbar.css
@@ -9,10 +9,13 @@ body {
 /* Add a black background color to the top navigation */
 .topnav {
     background-color: rgb(224, 224, 224);
-    position: sticky;
+    position: fixed;
+    top: 0;
     overflow:auto;
     color: black;
     width: 100%;
+    z-index: 10000;
+    
 }
 
 .topnav a.left {
@@ -60,6 +63,6 @@ body {
     left: 0;
     width: 0%;
     height: 2.5px;
-    background-color: #ff0000;
+    background-color: #6dd3ff;
     transition: width 0.5s ease-in-out;
 }
