--- a/public/Assets/css/board.css
+++ b/public/Assets/css/board.css
@@ -1,23 +1,15 @@
-body {
-    background-color: black;
-    overflow: hidden;
-}
-
-#Title {
-    color: white;
+#BoardTitle {
+    color: black;
+    font-size:100px;
+    font-weight: 100;
 }
 
 .main {
     background-color: black;;
     color:white;
     padding: 30px;
-    border-radius: 30px;
     width:auto;
     line-height: 6em;
-}
-
-.carousel {
-    height: 75vh;
 }
 
 .main p {
