--- a/public/Assets/css/home.css
+++ b/public/Assets/css/home.css
@@ -1,3 +1,36 @@
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    background-color: white;
+}
+
+#Title {
+    font-weight: bolder;
+    color: white;
+    text-align: center;
+    padding-top: 30vh;
+    border-radius: 30px;
+    background-color: rgba(0, 0, 0, 0.9);
+    font-size: 140px;
+    margin: 0 auto;
+    animation: slide-up 2s, move-and-expand 1s;
+    animation-fill-mode: both;
+    opacity: 0;
+}
+
+#Sub-Title {
+    font-weight: 300;
+    color: white;
+    text-align: center;
+    border-radius: 30px;
+    bottom: 0;
+    animation: slide-up 2s, move-and-expand-SubTitle 1s;
+    animation-fill-mode: both;
+    opacity: 0;
+}
+
 #HomeMain {
     background-image: url(/Assets/images/background-temp.gif);
     background-size: cover;
@@ -5,9 +38,9 @@
     background-position: center;
     height: 100vh;
     width: 100%;
-    display: flex;
+    text-align:center;
+    position: relative;
     justify-content: center;
-    align-items: center;
     color: white;
 }
 
