--- a/public/Assets/css/about.css
+++ b/public/Assets/css/about.css
@@ -14,7 +14,7 @@ body {
     background-color: gray;
 }
 
-#About {
+#AboutLabel {
     font-weight: 300;
     color: black;
     text-align: center;
@@ -24,7 +24,7 @@ body {
 }
 
 #Text1,#Text3 {
-    width: 80%;
+    width: 70%;
     height: 50vh;
     background-color: gray;
     z-index: 1000;
@@ -33,10 +33,14 @@ body {
 }
 
 #Text2 {
-    width: 80%;
+    width: 70%;
     height: 50vh;
     background-color: rgb(0, 0, 0);
     z-index: 1000;
     margin-right: 0px;
     margin-left: auto;
+}
+
+#About {
+    height: fit-content;
 }
