--- a/public/Assets/css/navbar.css
+++ b/public/Assets/css/navbar.css
@@ -18,18 +18,20 @@ body {
     
 }
 
-.topnav a.left {
+.topnav button.left {
     padding-right: 50px;
 }
 
 /* Style the links inside the navigation bar */
-.topnav a:not(.img) {
+.topnav button:not(.img) {
     float: right;
     text-align: center;
     padding: 4px 16px;
     text-decoration: none;
     font-size: 15px;
     color: black;
+    background-color: transparent;
+    border-width: 0;
 }
 
 .img {
@@ -39,6 +41,8 @@ body {
     text-decoration: none;
     font-size: 12px;
     color: black;
+    background-color: transparent;
+    border-width: 0;
 }
 
 .image {
@@ -46,17 +50,17 @@ body {
     height: 75px;
 }
 
-.item:hover .text::after {
+.item:hover .text::after, .after::after {
     width: 100%;
 }
 
-.text {
+.text, .after {
     position: relative;
     display: inline-block;
     font-weight:500;
 }
 
-.text::after {
+.text::after, .after::after {
     content: "";
     position: absolute;
     bottom: -10px;
