--- a/public/Assets/css/animations.css
+++ b/public/Assets/css/animations.css
@@ -33,3 +33,28 @@
         font-size: 40px;
     }
 }
+
+@media (max-width: 719px) {
+    @keyframes move-and-expand {
+        from {
+            transform: translateY(80%);
+            font-size: 10px;
+        }
+    
+        to {
+            transform: translateY(0%);
+            font-size: 60px;
+        }
+    }
+    @keyframes move-and-expand-SubTitle {
+        from {
+            transform: translateY(80%);
+            font-size: 10px;
+        }
+    
+        to {
+            transform: translateY(0%);
+            font-size: 20px;
+        }
+    }
+}
