--- a/public/Assets/css/calendar.css
+++ b/public/Assets/css/calendar.css
@@ -3,3 +3,9 @@
     font-size:80px;
     font-weight: 100;
 }
+
+@media (max-width: 719px) {
+    #CalendarLabel {
+        font-size: 50px;
+    }
+}
