--- a/public/Assets/css/home.css
+++ b/public/Assets/css/home.css
@@ -52,6 +52,35 @@ body {
     background-color: black;
     opacity: 0.5;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: rgb(0, 0, 0, 1);
+}
+
+@media (max-width: 719px) {
+    #Title {
+        font-weight: bolder;
+        color: white;
+        text-align: center;
+        padding-top: 20vh;
+        border-radius: 30px;
+        background-color: rgba(0, 0, 0, 0.9);
+        font-size: 40px;
+        margin: 0 auto;
+        animation: slide-up 2s, move-and-expand 1s;
+        animation-fill-mode: both;
+        opacity: 0;
+    }
+    
+    #Sub-Title {
+        font-size: 20px;
+        font-weight: 300;
+        color: white;
+        text-align: center;
+        border-radius: 30px;
+        bottom: 0;
+        animation: slide-up 2s, move-and-expand-SubTitle 1s;
+        animation-fill-mode: both;
+        opacity: 0;
+    }
+    
 }
