--- a/public/Assets/css/navbar.css
+++ b/public/Assets/css/navbar.css
@@ -7,23 +7,22 @@ body {
 }
 
 /* Add a black background color to the top navigation */
-.topnav {
-    background-color: rgb(224, 224, 224);
+.desktoptopnav {
+    background-color: rgb(255, 255, 255);
     position: fixed;
     top: 0;
-    overflow:auto;
+    overflow: auto;
     color: black;
     width: 100%;
     z-index: 10000;
-    
 }
 
-.topnav button.left {
+.desktoptopnav button.left {
     padding-right: 50px;
 }
 
 /* Style the links inside the navigation bar */
-.topnav button:not(.img) {
+.desktoptopnav button:not(.img) {
     float: right;
     text-align: center;
     padding: 4px 16px;
@@ -50,17 +49,19 @@ body {
     height: 75px;
 }
 
-.item:hover .text::after, .active .text::after {
+.item:hover .text::after,
+.active .text::after {
     width: 100%;
 }
 
-.text, .active .text {
+.text,
+.active .text {
     position: relative;
     display: inline-block;
-    font-weight:500;
+    font-weight: 500;
 }
 
-.text::after{
+.text::after {
     content: "";
     position: absolute;
     bottom: -10px;
@@ -69,4 +70,71 @@ body {
     height: 2.5px;
     background-color: #6dd3ff;
     transition: width 0.5s ease-in-out;
+}
+
+#MobileVisible {
+    opacity: 0;
+    pointer-events: none;
+    width:0;
+    height:0;
+}
+
+#ComputerVisible {
+    opacity: 1;
+    width:100%;
+}
+
+.hamburger {
+    width: 0;
+    height: 0;
+}
+
+@media (max-width: 719px) {
+    .image {
+        width: 10%;
+        height: 10%;
+    }
+
+    #MobileVisible {
+        opacity: 1;
+        width: 100%;
+    }
+
+    #ComputerVisible {
+        opacity: 0;
+        pointer-events: none;
+        width: 0;
+        height: 0;
+    }
+
+    .hamburger {
+        margin: 4%;
+        width: 7.5%;
+        height: 7.5%;
+        z-index: 8;
+    }
+
+    /* Style the links inside the navigation bar */
+    .desktoptopnav button:not(.img) {
+        float: right;
+        text-align: center;
+        padding: 4px 16px;
+        text-decoration: none;
+        font-size: 15px;
+        color: black;
+        background-color: transparent;
+        border-width: 0;
+    }
+
+    .img {
+        float: left;
+        text-align: center;
+        padding: 4px 16px;
+        text-decoration: none;
+        font-size: 12px;
+        color: black;
+        background-color: transparent;
+        border-width: 0;
+    }
+
 }
