--- a/public/Assets/css/about.css
+++ b/public/Assets/css/about.css
@@ -31,7 +31,7 @@ body {
 #Text3 {
     width: 70%;
     height: 50vh;
-    background-color: rgb(13, 65, 2);
+    background-color: rgb(113, 113, 113);
     z-index: 1000;
     margin-left: 0px;
     margin-right: auto;
@@ -41,7 +41,7 @@ body {
 #Text2 {
     width: 70%;
     height: 50vh;
-    background-color: rgb(0, 255, 51);
+    background-color: rgb(97, 97, 97);
     z-index: 1000;
     margin-right: 0px;
     margin-left: auto;
@@ -65,4 +65,51 @@ body {
 
 .ContentFiller {
     display: flex;
+}
+
+@media (max-width:719px) {
+    #AboutLabel {
+        font-size: 100px;
+    }
+
+    .ContentFiller {
+        width:100%;
+        display:flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #Text1, #Text2, #Text3 {
+        width: 100%;
+    }
+
+    #Text1, #Text2, #Text3 {
+        background-image: url(/Assets/images/background-temp.jpg);
+    }
+
+    .ContentFiller h1 {
+        width: 100%;
+        font-size: 20px;
+        padding: 7.5px;
+        font-weight: 100;
+        color: white;
+        text-align: center;
+        border-radius: 30px;
+        background-color: rgba(0, 0, 0, 0.9);
+        margin: 0 auto;
+        animation: slide-right 2s, move-and-expand-About 1s;
+        animation-fill-mode: both;
+        opacity: 1;
+        height: 90%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .ContentFiller img {
+        display: none;
+        visibility: hidden;
+        height: 0;
+        width: 0;
+    }
 }
