--- a/public/Assets/css/navbar.css
+++ b/public/Assets/css/navbar.css
@@ -75,13 +75,13 @@ body {
 #MobileVisible {
     opacity: 0;
     pointer-events: none;
-    width:0;
-    height:0;
+    width: 0;
+    height: 0;
 }
 
 #ComputerVisible {
     opacity: 1;
-    width:100%;
+    width: 100%;
 }
 
 .hamburger {
@@ -90,7 +90,7 @@ body {
 }
 
 #MobileVisibleUl {
-    display: none;
+    position: absolute;
 }
 
 @media (max-width: 719px) {
@@ -103,6 +103,7 @@ body {
         opacity: 1;
         width: 100%;
         height: fit-content;
+        pointer-events: unset;
         background-color: white;
         position: fixed;
         z-index: 15000;
@@ -115,6 +116,36 @@ body {
         height: 0;
     }
 
+    #HamburgerSelectionButton {
+        height: fit-content;
+        background-color: transparent;
+    }
+
+    #ImageMobile {
+        width: 10%;
+        height: auto;
+        display:flex;
+        z-index: 8;
+        padding-left: 10px;
+        float: left;
+        align-items: center;
+        justify-content: center;
+        vertical-align: middle;
+    }
+
+    /* Dropdown Content (Hidden by Default) */
+    .dropdown-content {
+        display: none;
+        background-color: #f9f9f9;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        z-index: 1;
+    }
+
+    /* Show the dropdown menu when clicked */
+    .show {
+        display: block;
+    }
+
     .hamburger {
         padding-top: 1vh;
         padding-bottom: 1vh;
@@ -125,27 +156,15 @@ body {
         float: right;
     }
 
-    /* Style the links inside the navigation bar */
-    .desktoptopnav button:not(.img) {
-        float: right;
-        text-align: center;
-        padding: 4px 16px;
-        text-decoration: none;
-        font-size: 15px;
-        color: black;
-        background-color: transparent;
-        border-width: 0;
+    #MobileVisibleUl {
+        width: 100%;
+        height: fit-content;
     }
 
-    .img {
-        float: left;
+    #MobileVisibleUl button {
+        float: none;
+        display: block;
         text-align: center;
-        padding: 4px 16px;
-        text-decoration: none;
-        font-size: 12px;
-        color: black;
-        background-color: transparent;
-        border-width: 0;
+        width: 100%;
     }
-
 }
