--- a/public/Assets/css/home.css
+++ b/public/Assets/css/home.css
@@ -11,6 +11,7 @@ body {
     color: white;
     text-align: center;
     padding-top: 30vh;
+    padding-bottom: 4vh;
     border-radius: 30px;
     background-color: rgba(0, 0, 0, 0.9);
     font-size: 140px;
