--- a/public/Assets/css/animations.css
+++ b/public/Assets/css/animations.css
@@ -91,4 +91,15 @@
             opacity: 1;
         }
     }
+
+    @keyframes growDown {
+        0% {
+            opacity: 0;
+            transform: translateY(-25px);
+        }
+        100% {
+            opacity: 1;
+            transform: translateY(-10px);
+        }
+    }
 }
