--- a/public/Assets/css/navbar.css
+++ b/public/Assets/css/navbar.css
@@ -79,6 +79,15 @@ body {
     height: 0;
 }
 
+#LeftImg {
+    display: flex;
+}
+
+#ImgTitle {
+    padding-left: 1vh;
+    font-size: 3rem;
+}
+
 #ComputerVisible {
     opacity: 1;
     width: 100%;
@@ -109,6 +118,11 @@ body {
         z-index: 15000;
     }
 
+    #TopNavTitle {
+        height: fit-content;
+        font-size: clamp(1rem, 4.5vw, 3.5rem);
+    }
+
     #ComputerVisible {
         opacity: 0;
         pointer-events: none;
@@ -122,15 +136,14 @@ body {
     }
 
     #ImageMobile {
+        padding-top: 1vh;
+        padding-bottom: 1vh;
+        padding-left: 10px;
         width: 10%;
         height: auto;
         display:flex;
         z-index: 8;
-        padding-left: 10px;
         float: left;
-        align-items: center;
-        justify-content: center;
-        vertical-align: middle;
     }
 
     /* Dropdown Content (Hidden by Default) */
@@ -149,10 +162,11 @@ body {
     .hamburger {
         padding-top: 1vh;
         padding-bottom: 1vh;
-        width: 7.5%;
-        height: auto;
-        z-index: 8;
         padding-right: 10px;
+        width: 8%;
+        height: auto;
+        display: flex;
+        z-index: 8;
         float: right;
     }
 
