--- a/public/Assets/css/mobile-homepage.css
+++ b/public/Assets/css/mobile-homepage.css
@@ -115,6 +115,10 @@
         opacity: 0;
     }
 
+    #Home {
+        top: 0;
+    }
+
     /* MOBILE About Navigator Settings */
 
     #AboutLabel {
